--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,42 +1,26 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  background-color: lightgray;
+  margin-top: 0;
+  margin: 0;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+ 
+section.header{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  background-color: gray;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+section.header div#header h1{
+  text-align: left;
+  width: 100%;
+  margin-bottom: 0;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+section.header div#header p{
+  text-align: left;
+  width: 100%;
+  margin-top: 0;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+section.header div#header_boton{
+  display: flex;
+  align-items: center;
 }
