--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -7,20 +7,46 @@ body {
 section.header{
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   width: 100%;
   background-color: gray;
+  padding: 16px;
+  box-sizing: border-box;
+}
+section.header div#header{
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
 }
 section.header div#header h1{
   text-align: left;
-  width: 100%;
+  width: auto;
   margin-bottom: 0;
 }
 section.header div#header p{
   text-align: left;
-  width: 100%;
+  width: auto;
   margin-top: 0;
 }
 section.header div#header_boton{
   display: flex;
   align-items: center;
+}
+
+section.juegos{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  background-color: whitesmoke;
+  margin: 0;
+  padding: 24px 0;
+  box-sizing: border-box;
+}
+section.juegos div#juegos{
+  width: 100%;
+  max-width: 1200px;
+  padding: 0 20px;
+  box-sizing: border-box;
 }
