--- a/src/styles/TarjetaJuego.css
+++ b/src/styles/TarjetaJuego.css
@@ -1,10 +1,3 @@
-.listaJuegos {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 20px; /* separación entre tarjetas */
-  padding: 20px;
-}
-
 
 .tarjeta_juego {
   background: #ffffff;
@@ -12,9 +5,24 @@
   padding: 15px;
   box-shadow: 0px 2px 6px rgba(0,0,0,0.15);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   transition: transform .2s;
+  gap: 10px;
+  column-gap: 2.5px;
+  width: 90%;
+  margin: 20px;
+}
+
+div.info h3{
+  margin-bottom: 5px;
+}
+
+div.imagen {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
 }
 
 .tarjeta_juego:hover {
