--- a/src/styles/JuegosManager.css
+++ b/src/styles/JuegosManager.css
@@ -10,9 +10,10 @@ section.header{
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  background-color: gray;
+  background-color: #111827;
   padding: 16px;
   box-sizing: border-box;
+  color: white;
 }
 section.header div#header{
   display: flex;
@@ -21,6 +22,7 @@ section.header div#header{
   justify-content: space-between;
   gap: 10px;
   width: 100%;
+  color: white;
 }
 section.header div#header h1{
   text-align: left;
@@ -42,11 +44,10 @@ section.juegos{
   flex-direction: row;
   justify-content: center;
   width: 100%;
-  background-color: whitesmoke;
-  margin: 0;
-  padding: 24px 0;
+  background-color: #0B1221;
   box-sizing: border-box;
 }
+
 section.juegos div#juegos{
   width: 100%;
   max-width: 1200px;
