--- a/src/styles/TarjetaJuego.css
+++ b/src/styles/TarjetaJuego.css
@@ -1,6 +1,6 @@
 
 .tarjeta_juego {
-  background: #ffffff;
+  background: #111827;
   border-radius: 12px;
   padding: 15px;
   box-shadow: 0px 2px 6px rgba(0,0,0,0.15);
@@ -12,6 +12,7 @@
   column-gap: 2.5px;
   width: 90%;
   margin: 20px;
+  color: white;
 }
 
 div.info h3{
@@ -35,6 +36,16 @@ div.imagen {
   height: 180px;
   object-fit: contain;
   object-position: center;
-  background-color: #f5f5f5;
+  background-color: #111827;
   border-radius: 10px;
+}
+
+button{
+  background-color: #3B82F6;
+  color: white;
+  border-radius: 4px;
+}
+
+button:hover{
+  background-color: #1D4ED8;
 }
