--- a/src/styles/TarjetaJuego.css
+++ b/src/styles/TarjetaJuego.css
@@ -15,6 +15,10 @@
   color: white;
 }
 
+div.info {
+  width: 100%;
+}
+
 div.info h3{
   margin-bottom: 5px;
 }
@@ -38,6 +42,24 @@ div.imagen {
   object-position: center;
   background-color: #111827;
   border-radius: 10px;
+}
+
+div.botones {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+  align-items: center;
+  justify-content: right;
+  width: 100%;
+
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.25s ease;
+}
+
+.tarjeta_juego:hover .botones {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 button{
