--- a/src/styles/CrearJuego.css
+++ b/src/styles/CrearJuego.css
@@ -34,13 +34,16 @@ h2 {
 
 
 .cerrar {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: transparent;
-    border: none;
-    font-size: 20px;
-    cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: #ef4444;
+  border: none;
+  color: white;
+  font-weight: bold;
+  padding: 5px 10px;
+  border-radius: 6px;
+  cursor: pointer;
 }
 
 
